# python_fluent_practices

.github/workflows/: python_architecture.yml
python_architecture/: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
python_architecture/src/: async_await.py  timeit_news.py
python_architecture/src/news/: __init__.py  config.py  main.py
python_architecture/src/news/analysis/: __init__.py  analyzer.py
python_architecture/src/news/core/: __init__.py  exceptions.py  models.py  services.py
python_architecture/src/news/io/: __init__.py  cli.py  display.py
python_architecture/src/news/sources/: __init__.py  guardian.py
python_architecture/src/platzi_news/core/: services.py
python_architecture/src/platzi_news/do_not_format/: test.py
python_architecture/src/platzi_news/io/: cli.py
python_architecture/src/platzi_news/sources/: newsapi.py
python_architecture/tests/: __init__.py  test_analyzer.py  test_cli.py  test_config.py  test_display.py  test_exceptions.py  test_models.py  test_news_sources.py
